.k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wolf-mansion-api-svc
  namespace: default
  labels:
    app: wolf-mansion-api
spec:
  type: ClusterIP
  selector:
    app: wolf-mansion-api
  ports:
    - name: http
      port: 8081
      targetPort: 8081
