.k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wolf-mansion-frontend-svc
  namespace: default
  labels:
    app: wolf-mansion-frontend
spec:
  type: ClusterIP
  selector:
    app: wolf-mansion-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
